<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>52</version>
  </parent>

  <groupId>eu.maveniverse.maven.mase</groupId>
  <artifactId>mase</artifactId>
  <version>1.0.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>

  <url>https://www.maveniverse.eu/mase</url>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
    <module>search-api</module>
    <module>search-transport-apache</module>
    <module>search-transport-java11</module>
    <module>search-backend-indexer</module>
    <module>search-backend-remoterepository</module>
    <module>search-backend-smo</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/mase.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/mase.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/maveniverse/mase</url>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/mase/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/mase/actions</url>
  </ciManagement>

  <properties>
    <project.build.outputTimestamp>2024-05-16T17:58:23Z</project.build.outputTimestamp>

    <!--
    Build time: latest Maven and LTS Java.
    -->
    <requireBuildtimeMavenVersion.version>[3.9.12,)</requireBuildtimeMavenVersion.version>
    <requireBuildtimeJavaVersion.version>[21,)</requireBuildtimeJavaVersion.version>

    <!--
    Run time: Java 8+
    -->
    <maven.compiler.release>8</maven.compiler.release>
    <maven.compiler.testRelease>11</maven.compiler.testRelease>

    <!-- Dependency versions -->
    <version.mavenIndexer>7.1.6</version.mavenIndexer>
    <version.sisu>1.0.0</version.sisu>
    <version.slf4j>2.0.17</version.slf4j>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Internal -->
      <dependency>
        <groupId>eu.maveniverse.maven.mase</groupId>
        <artifactId>search-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mase</groupId>
        <artifactId>search-transport-apache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mase</groupId>
        <artifactId>search-transport-java11</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mase</groupId>
        <artifactId>search-backend-indexer</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mase</groupId>
        <artifactId>search-backend-remoterepository</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mase</groupId>
        <artifactId>search-backend-smo</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Logging (runtime only) -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${version.slf4j}</version>
      </dependency>

      <!-- RR -->
      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>1.22.1</version>
      </dependency>

      <!-- SMO -->
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.13.2</version>
      </dependency>

      <!-- DI -->
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>6.0.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>33.5.0-jre</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>org.eclipse.sisu.inject</artifactId>
        <version>${version.sisu}</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>6.0.3</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>6.0.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
        <version>${version.sisu}</version>
        <executions>
          <execution>
            <id>index-project</id>
            <goals>
              <goal>main-index</goal>
              <goal>test-index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
